; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_struct.c_bitfield_initializer.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_struct.c_bitfield_initializer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8, i8 }
%struct.anon = type { i8 }

@inittest = common dso_local global %struct.TYPE_2__ zeroinitializer, align 1
@__const.bitfield_initializer.x = private unnamed_addr constant %struct.anon { i8 66 }, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @bitfield_initializer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bitfield_initializer() #0 {
  %1 = alloca %struct.anon, align 1
  %2 = load i8, i8* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @inittest, i32 0, i32 0), align 1
  %3 = call i32 @expect(i32 2, i8 signext %2)
  %4 = load i8, i8* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @inittest, i32 0, i32 1), align 1
  %5 = call i32 @expect(i32 4, i8 signext %4)
  %6 = bitcast %struct.anon* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %6, i8* align 1 getelementptr inbounds (%struct.anon, %struct.anon* @__const.bitfield_initializer.x, i32 0, i32 0), i64 1, i1 false)
  %7 = bitcast %struct.anon* %1 to i8*
  %8 = load i8, i8* %7, align 1
  %9 = shl i8 %8, 4
  %10 = ashr i8 %9, 4
  %11 = call i32 @expect(i32 2, i8 signext %10)
  %12 = bitcast %struct.anon* %1 to i8*
  %13 = load i8, i8* %12, align 1
  %14 = ashr i8 %13, 4
  %15 = call i32 @expect(i32 4, i8 signext %14)
  ret void
}

declare dso_local i32 @expect(i32, i8 signext) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
